Change the project to be able to use the library in JVM 8